<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg3"
    tools:context="com.project.finalyear.thaispellinggame.fragment.LearningSectionMaekeryFragment">

    <LinearLayout
        android:background="@drawable/bg_white"
        android:layout_margin="50dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="มาตรา แม่เกย"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgPlay"
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/play"
                            android:visibility="invisible"
                            app:civ_border_color="#000000"
                            app:civ_border_width="2dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgStop"
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:src="@drawable/stop"
                            app:civ_border_color="#000000"
                            app:civ_border_width="2dp" />
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:textStyle="bold"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/content_maekery_1"
                android:textSize="16dp" />


            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="เช่น"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/content_maekery_2"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/content_maekery_3"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/content_maekery_4"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/content_maekery_5"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_back" />
            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_next" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
